# utils

./: HELP.md  README.md  bkmk  eudo  frmtrnm
bkmk/: README.md  bkmk
fltree/: CHANGELOG.md  GeneralizedTree.hs  LICENSE  Main.hs  README.md  fltree  fltree.cabal
fltree/app/: Main.hs
fltree/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
fltree/dist-newstyle/packagedb/ghc-9.4.8/: fltree-0.1.0.0-inplace.conf  package.cache
fltree/src/: GeneralizedTree.hs
fltree/test/: tree.txt
frmtrnm/: README.md
