cabal-version:      3.0
name:               fltree
version:            0.1.1
synopsis:           Pretty-printing n-ary rooted trees
-- description:
license:            MIT
license-file:       LICENSE
author:             H. Ali
maintainer:         hatalihim7d4@protonmail.com
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  GeneralizedTree
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable fltree
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        fltree

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite fltree-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        fltree
